# fourier-playground

./: FourierSeries.hs  Main.hs  README.md  fourierSeries.cabal
