cabal-version:      3.0

name:               FourierSeries
version:            0.1.0.0

synopsis:        Creates a playground to experiment with complex fourier series

license:            MIT
license-file:       LICENSE

author:             Arne Rönneberg

maintainer:         arne.roenneberg@icloud.com

category:           Game
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable pong
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs


    -- Other library packages from which modules are imported.
    build-depends:    base ^>= 4.17.2.1,
                      gloss == 1.13.2.2

    default-language: Haskell2010
